[metadata]
name = pytest_infrastructure
version = 0.0.1
description = Upfront environment validation before running tests.
author = Simon Kerr
author_email = jackofspaces@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords=[
        'pytest', 'py.test', 'infrastructure',
    ],
project_urls =
    Tracker = https://github.com/symonk/pytest-infrastructure/issues

[options]
packages =
    infrastructure
    infrastructure.exceptions
    infrastructure.infra_functions
    infrastructure.utils
    infrastructure.hooks
install_requires =
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm
zip_safe = no


[tool:isort]
force_single_line = True
line_length = 140
known_first_party = infrastructure
default_section = THIRDPARTY
forced_separate = tests
not_skip = __init__.py
skip = .tox,.eggs,ci/templates

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
ignore_errors = False

[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates

[tool:pytest]
norecursedirs = .tox .git .local *.egg build

[options.entry_points]
pytest11 =
    pytest11.infrastructure=infrastructure.plugin